# advent-of-code-2024-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  run.sh  run_tests.sh
src/cmake/: AdventOfCodeConfig.h.in
src/cpp/: DayOne.cpp  DayOne.h  DayOneParser.cpp  DayOneParser.h  DayOneParserTests.cpp  DayOneTests.cpp  DayTwo.cpp  DayTwo.h  DayTwoParser.cpp  DayTwoParser.h  DayTwoParserTests.cpp  DayTwoTests.cpp  InputFileReader.cpp  InputFileReader.h  main.cpp  test.cpp
